// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button headerFooter demo works fine 1`] = `
<div>
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <div
      class="t-list__header"
    >
      这里是 Header
    </div>
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表标题
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容的描述性文字
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表标题
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容的描述性文字
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表标题
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容的描述性文字
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      
    </ul>
    <div
      class="t-list__footer"
    >
      这里是 Footer
    </div>
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
  <div
    style="margin-bottom: 16px;"
  />
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <div
      class="t-list__header"
    >
      
       通过 Slot 插入的 Header 
      
    </div>
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表标题
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容的描述性文字
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表标题
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容的描述性文字
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表标题
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容的描述性文字
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      
    </ul>
    <div
      class="t-list__footer"
    >
      
       通过 Slot 插入的 Footer 
      
    </div>
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Button imageText demo works fine 1`] = `
<div>
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表标题
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容的描述性文字
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表标题
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容的描述性文字
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表标题
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容的描述性文字
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
  <div
    style="margin-bottom: 16px;"
  />
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表标题
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                
                <p>
                  列表内容的描述性文字
                </p>
                
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Button multiline demo works fine 1`] = `
<div>
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <!---->
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <!---->
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <!---->
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Button operation demo works fine 1`] = `
<div>
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <li
            class="t-list-item__action"
          >
            
            <span>
              <button
                class="t-button t-size-m t-button--variant-text t-button--theme-default"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  
                  操作1
                  
                </span>
              </button>
              <button
                class="t-button t-size-m t-button--variant-text t-button--theme-default"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  
                  操作2
                  
                </span>
              </button>
              <button
                class="t-button t-size-m t-button--variant-text t-button--theme-default"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  
                  操作3
                  
                </span>
              </button>
            </span>
            
          </li>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <li
            class="t-list-item__action"
          >
            
            <span>
              <button
                class="t-button t-size-m t-button--variant-text t-button--theme-default"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  
                  操作1
                  
                </span>
              </button>
              <button
                class="t-button t-size-m t-button--variant-text t-button--theme-default"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  
                  操作2
                  
                </span>
              </button>
              <button
                class="t-button t-size-m t-button--variant-text t-button--theme-default"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  
                  操作3
                  
                </span>
              </button>
            </span>
            
          </li>
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
  <div
    style="margin-bottom: 16px;"
  />
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <li
            class="t-list-item__action"
          >
            
            <button
              class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                <svg
                  class="t-icon t-icon-edit"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M10.88 1.74l3.25 3.24.7-.7-3.24-3.25-.7.7zM2.35 13.86l3.62-.72 7.3-7.3-3.25-3.24-7.3 7.3L2 13.5a.3.3 0 00.35.35zm7.67-9.85l1.83 1.83-6.38 6.38-2.28.46.45-2.29 6.38-6.38z"
                    fill="currentColor"
                    fillOpacity="0.9"
                  />
                </svg>
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                <svg
                  class="t-icon t-icon-download"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M12.26 5.81L8.5 9.58V.5h-1v9.08L3.74 5.8l-.71.71 4.62 4.62c.2.2.5.2.7 0l4.62-4.62-.7-.7z"
                    fill="currentColor"
                    fillOpacity="0.9"
                  />
                  <path
                    d="M2 11v2a1 1 0 001 1h10a1 1 0 001-1v-2h-1v2H3v-2H2z"
                    fill="currentColor"
                    fillOpacity="0.9"
                  />
                </svg>
                
              </span>
            </button>
            
          </li>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <li
            class="t-list-item__action"
          >
            
            <button
              class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                <svg
                  class="t-icon t-icon-edit"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M10.88 1.74l3.25 3.24.7-.7-3.24-3.25-.7.7zM2.35 13.86l3.62-.72 7.3-7.3-3.25-3.24-7.3 7.3L2 13.5a.3.3 0 00.35.35zm7.67-9.85l1.83 1.83-6.38 6.38-2.28.46.45-2.29 6.38-6.38z"
                    fill="currentColor"
                    fillOpacity="0.9"
                  />
                </svg>
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--shape-square"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                <svg
                  class="t-icon t-icon-download"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M12.26 5.81L8.5 9.58V.5h-1v9.08L3.74 5.8l-.71.71 4.62 4.62c.2.2.5.2.7 0l4.62-4.62-.7-.7z"
                    fill="currentColor"
                    fillOpacity="0.9"
                  />
                  <path
                    d="M2 11v2a1 1 0 001 1h10a1 1 0 001-1v-2h-1v2H3v-2H2z"
                    fill="currentColor"
                    fillOpacity="0.9"
                  />
                </svg>
                
              </span>
            </button>
            
          </li>
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Button scroll demo works fine 1`] = `
<div
  class="t-list t-size-m"
  style="max-height: 200px;"
>
  
  
  <!---->
  <ul
    class="t-list-items"
  >
    
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容的描述性文字
        
        <!---->
      </div>
    </li>
    
  </ul>
  <!---->
  
  <div
    class="t-list__load"
  >
    <!---->
  </div>
  
</div>
`;

exports[`Button size demo works fine 1`] = `
<div>
  <div
    class="t-list t-size-s t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容的描述性文字
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容的描述性文字
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容的描述性文字
          
          <!---->
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
  <div
    style="margin-bottom: 16px;"
  />
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容的描述性文字
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容的描述性文字
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容的描述性文字
          
          <!---->
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
  <div
    style="margin-bottom: 16px;"
  />
  <div
    class="t-list t-size-l t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容的描述性文字
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容的描述性文字
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容的描述性文字
          
          <!---->
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
</div>
`;
